# revisao-rhnr

./: pyproject.toml
.streamlit/: config.toml
revisao_rhnr/.streamlit/: config.toml
revisao_rhnr/app/: app.py  data.py
revisao_rhnr/app/paginas/: dataframe_styling.py  relatorio_selecao_inicial.py  relatorio_selecao_proposta.py  revisao_rhnr.py
revisao_rhnr/databases/: alimentacao_execel_para_tabelas.py  alimentacao_tabelas.py  database_access.py  migracao_bases_cplar.py  models.py  models_postgres.py  models_sqlite.py
revisao_rhnr/databases/alimentacao_tabelas_bd_bases_cplar/: constantes.py  excel_para_tabelas_bd.py  manual_para_tabelas_bd.py  planilhas_revisao_para_tabelas_bd.py
